# warp-taper

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md
.github/workflows/: ci.yml
crates/warp-taper-cli/: Cargo.toml
crates/warp-taper-cli/src/: main.rs
crates/warp-taper-cli/tests/: e2e_real_warp.rs  run_with_tiny_warp.rs
crates/warp-taper-core/: Cargo.toml
crates/warp-taper-core/src/: bundle.rs  captions.rs  error.rs  lib.rs  log_tail.rs  pipeline.rs  scenario.rs
crates/warp-taper-core/src/assertion/: builtins.rs  mod.rs  shell.rs
crates/warp-taper-core/src/recorder/: macos.rs  mod.rs  noop.rs
crates/warp-taper-core/src/scenarios/: mcp_add_server_bypass.rs  mcp_env_headers_bypass.rs  mcp_integer_coercion.rs  mcp_log_rotation.rs  mcp_redaction_toggle.rs  mod.rs  secrets_regex_safe_mode_subscription_patched.rs  secrets_regex_startup_empty.rs
crates/warp-taper-core/src/snapshots/: warp_taper_core__bundle__tests__readme_full.snap  warp_taper_core__bundle__tests__readme_minimal.snap  warp_taper_core__bundle__tests__readme_with_artifacts.snap
crates/warp-taper-core/src/stages/: build.rs  deploy.rs  mod.rs
crates/warp-taper-core/tests/: assertion_engine.rs  log_tail_property.rs  pipeline_with_noop.rs  scenario_yaml_corpus.rs  smoke_macos_screencapture.rs  stages_integration.rs
crates/warp-taper-core/tests/fixtures/scenario-yaml/: full.yaml  minimal.yaml  with-expected.yaml  with-mcp-paths.yaml  with-ticket.yaml
crates/warp-taper-fixtures/: Cargo.toml
crates/warp-taper-fixtures/src/: cargo_project.rs  lib.rs
docs/: PLAN.md  lingo.md  sample-tape-README.md  scenario-format.md
docs/evidence/10839-mcp-redaction-toggle/: README.md
docs/evidence/11262-secrets-regex-startup-empty/: LAUNCH.md  README.md
docs/evidence/11263-mcp-env-headers-bypass/: README.md
docs/evidence/11265-mcp-add-server-bypass/: README.md
docs/evidence/11360-mcp-add-server-fix/: README.md  recipe.json
docs/evidence/11407-mcp-integer-coercion/: captions.json  master.mov
docs/sample-tape/: 10874.mov  9853.mov  README.md  master.mov
docs/sample-tape/logs/mcp/: demo-mcp-server-abc123.log.1  demo-mcp-server-abc123.log.2  demo-mcp-server-abc123.log.rotations.jsonl  demo-mcp-server-abc123.log.summaries.jsonl
lib/: build.sh  bundle.sh  deploy.sh  evaluate.sh  record.sh
scenarios/10874-mcp-log-rotation/: assertions.sh  metadata.yaml  scenario.md  setup.sh
scripts/: drive-warp.swift  generate-sample-tape.sh  mov-to-mp4.swift  mp4-to-gif.swift  prime-warp-oss-auth.env.sample  prime-warp-oss-auth.sh  record-agent-evidence.sh  record-warp-demo.sh  record-warp.sh  record-window.swift  warp-driver.swift
scripts/demo-rotation/: Cargo.toml
scripts/demo-rotation/src/: main.rs
scripts/recipes/: 10839-mcp-redaction-toggle.json  10874-mcp-log-rotation.json  11262-secrets-regex-startup-empty-patched.json  11262-secrets-regex-startup-empty.json  11263-mcp-env-headers-bypass.json  11265-mcp-add-server-bypass.json  11407-mcp-integer-coercion.json  11413-mcp-parse-error-banner.json  8761-mcp-secret-redaction.json  9853-mcp-fresh-conversation.json  9853-stable-mcp-fresh-conversation.json
