[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
version = "0.0.0"
edition = "2021"
license = "MIT"
authors = ["David Engelmann <david@beatgig.com>"]
repository = "https://github.com/david-engelmann/warp-taper"

[workspace.dependencies]
thiserror = "2"
tokio = { version = "1", features = ["full"] }
clap = { version = "4", features = ["derive"] }
