[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
version = "0.0.0"
edition = "2021"
license = "MIT"
authors = ["David Engelmann <david@beatgig.com>"]
repository = "https://github.com/david-engelmann/warp-taper"

[workspace.dependencies]
thiserror = "2"
tokio = { version = "1", features = ["full"] }
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_yml = "0.0.12"
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }
regex = "1"

# Dev-only
tempfile = "3"
insta = "1"
proptest = "1"
rstest = "0.24"
