[package]
name = "warp-taper-cli"
description = "CLI front-end for warp-taper-core."
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[[bin]]
name = "warp-taper"
path = "src/main.rs"

[dependencies]
clap = { workspace = true }
ctrlc = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
warp-taper-core = { path = "../warp-taper-core" }

[target.'cfg(unix)'.dependencies]
libc = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
assert_cmd = { workspace = true }
predicates = { workspace = true }
warp-taper-fixtures = { path = "../warp-taper-fixtures" }
