[package]
name = "warp-taper-core"
description = "Evidence-recording library for warpdotdev/warp PRs."
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
thiserror = { workspace = true }
serde = { workspace = true }
serde_yml = { workspace = true }
chrono = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
insta = { workspace = true }
proptest = { workspace = true }
rstest = { workspace = true }
