[package]
name = "warp-taper-fixtures"
description = "Test fixtures and helpers for warp-taper. Dev-only; not published."
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
publish = false

[dependencies]

[dev-dependencies]
tempfile = { workspace = true }
